Swagger open api specification changes
